k8s/01-namespace.yml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: superset
  labels:
    app.kubernetes.io/name: superset
